<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/iphone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/textview_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/textview_placeholder_name"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/textview_description"
            android:textStyle="italic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/textview_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/textview_placeholder_description"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textview_number_in_stock"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/textview_description"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/textview_placeholder_number_in_stock"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textview_number_in_stock"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_add_to_cart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_baseline_shopping_cart"
            android:drawableLeft="@drawable/ic_baseline_shopping_cart"
            />

        <Button
            android:id="@+id/button_remove_from_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textview_number_in_stock"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="@string/button_remove_from_cart"
            android:textAllCaps="false"
            android:visibility="gone"
            android:drawableStart="@drawable/ic_baseline_shopping_cart"
            android:drawableLeft="@drawable/ic_baseline_shopping_cart"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


