<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.ShoppingCartActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/product_recyclerview_item"
        />
    <!--        tools:listitem="@layout/genre_recyclerview_item"-->
    <TextView
        android:id="@+id/textview_no_products_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/textview_no_products_found"
        android:textSize="15sp"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/textview_no_products_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/image_success"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/textview_no_products_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_circle_outline"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/image_failed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/textview_no_products_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_highlight_off"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_complete_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_complete_payment"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textview_no_products_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_checkout"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>